tests/compiler/InCorrespondingJSXClosingElement/index.tsx
<></something>
//~^ ERROR: Cannot find name 'something'.
//~| ERROR: Expected corresponding closing tag for JSX fragment.
//~  ERROR: Expression expected.